--- a/index.html
+++ b/index.html
@@ -9,33 +9,31 @@
 <body>
     <header>
         <nav class="logo">
-        <a href="">Web</a>
-        <a href="">Studio</a>
-        </nav>
-      
+        <a href="">WebStudio</a>
+        
         <ul>
             <li><a href="">Studio</a></li>
             <li><a href="">Portfolio</a></li>
             <li><a href="">Contacts</a></li>
         </ul>
+        </nav>
 
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+11 (000) 111-11-11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
 
     </header>
 <main>
 
-<div>
     <section>
-        <img src="./images/Dark-bg.jpg" alt="Dark-bg" width="1440">
-        <h1>Effective Solutions <br> for Your Business</h1>
+        <h1>Effective Solutions for Your Business</h1>
         <button type="button">Order Service</button>
     </section>
-</div>
 
 <section> 
+
+    <h2>Our skils</h2>
    <ul>
      <li><h3>Strategy</h3>
          <p>Our goal is to identify the business
@@ -101,12 +99,10 @@
 </main>
 
 <footer>
-    <section>
-        <img src="./images/Dark-bg2.jpg" alt="logo" width="1440">
-        <a href="">Web</a>
-        <a href="">Studio</a>
-        <p>Increase the flow of customers and <br> sales for your business with digital <br> marketing & growth solutions.</p>
-    </section>
+
+        <a href="">WebStudio</a>
+        <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+   
 </footer>
 
 </body>
